--- a/README.org
+++ b/README.org
@@ -77,6 +77,9 @@ its content.
 
 ** Agosto 2025
 
+*** 06-Ago-25
++ [[https://arxiv.org/abs/2508.03366][A comparative study of neurosymbolic AI approaches to interpretable logical reasoning]]. ~ Michael K. Chen. #Neurosymbolic #AI
+
 *** 05-Ago-25
 + [[https://leanprover-community.github.io/blog/posts/simons-lean-workshop/][Simons Foundation Lean Workshop]]. ~ Antoine Chambert-Loir Alex Kontorovich, Heather MacBeth. #ITP #LeanProver #Math
 + [[https://youtu.be/VY0WEUJMaXE][First analysis lecture (June 16, 2025) ~ Alex Kontorovich]]. #ITP #LeanProver #Math
