--- a/README.org
+++ b/README.org
@@ -77,6 +77,9 @@ its content.
 
 ** Agosto 2025
 
+*** 19-Ago-25
++ [[https://github.com/mchav/granite][Granite: A library for producing terminal plots]]. It depends only on Haskell's base package so it should be easy to use and install. ~ Michael Chavinda. #Haskell #FunctionalProgramming
+
 *** 18-Ago-25
 + [[https://cca.informatik.uni-freiburg.de/weidenbach60/Villadsen-Lund-Schlichtkrull-Formalizing-FOL.pdf][Formalizing axiomatics for first-order logic]]. ~ Jørgen Villadsen, Simon Tobias Lund, Anders Schlichtkrull. #ITP #IsabelleHOL #Logic
 + [[https://studenttheses.uu.nl/bitstream/handle/20.500.12932/49742/ThesisBenjamin.pdf][Formal correctness proofs for efficient CHAD]]. ~ Benjamin Meijs. #ITP #Agda
