--- a/README.org
+++ b/README.org
@@ -11,6 +11,7 @@ its content.
 
 * Content                                                                      :TOC:
 - [[#lecturas-del-año-2025][Lecturas del año 2025]]
+  - [[#septiembre-2025][Septiembre 2025]]
   - [[#agosto-2025][Agosto 2025]]
   - [[#julio-2025][Julio 2025]]
   - [[#junio-2025][Junio 2025]]
@@ -74,6 +75,13 @@ its content.
 - [[#lecturas-anteriores][Lecturas anteriores]]
 
 * Lecturas del año 2025
+
+** Septiembre 2025
+
+*** 01-Sep-25
++ [[https://arxiv.org/abs/2508.21593][Growing Mathlib: maintenance of a large scale mathematical library]]. ~ Anne Baanen et als. #ITP #LeanProver #Mathlib
++ [[https://mmhaskell.com/blog/2025/9/1/starting-out-with-graph-algorithms-basic-dfs][Starting out with graph algorithms: Basic DFS]]. ~ James Bowen. #Haskell #FunctionalProgramming #RustLang
++ [[https://blog.poisson.chat/posts/2025-09-01-alpha-beta.html][Alpha-beta pruning is just minimax in a lattice of clamping functions]]. ~ Li-yao Xia. #Haskell #FunctionalProgramming
 
 ** Agosto 2025
 
