Lecturas del 8-Septiembre-2025

--- a/README.org
+++ b/README.org
@@ -78,6 +78,11 @@ its content.
 
 ** Septiembre 2025
 
+*** 07-Sep-25
++ [[https://alexkontorovich.github.io/2025F311H/][Course: Introduction to real analysis]]. ~ Alex Kontorovich. #Math #ITP #LeanProver
++ [[https://youtu.be/TN51-1RRenY][Introduction to formal real analysis (Lecture 1)]]. ~ Alex Kontorovich. #Math #ITP #LeanProver
++ [[https://youtu.be/U2oCgeVgd9M][Introduction to formal real analysis (Lecture 2)]]. ~ Alex Kontorovich. #Math #ITP #LeanProver
+
 *** 06-Sep-25
 + [[https://www.uv.es/coslloen/Arxiu/Fitxers/An-introduction-to-Lean-4.pdf][An introduction to Lean 4]]. ~ E. Cosme Llópez, L. Gong. #ITP #LeanProver #FunctionalProgramming
 + [[https://aimoprize.com/updates/2025-09-05-the-gap-is-shrinking][The gap between commercial and open-source LLMs for Olympiad-level math is shrinking]]. #AI #LLMs #Math
